--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "dev": "NODE_ENV=development node server.js",
     "test": "echo \"No tests\" && exit 0"
   },
-  "engines": { "node": ">=18" },
+  "engines": {
+    "node": ">=18"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1",
-    "cors": "^2.8.5"
+    "mysql2": "^3.14.1"
   }
 }
